website/websites/u64q/code/fibonacci.2.pyston.log

 Sun, 06 Feb 2022 21:18:13 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-2.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-2.pyston", line 10
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
